added button to replace previous grid with a new grid of up to 100 squares per side

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <div class="buttons">
+        <button class="grid-button">Generate Grid</button>
+    </div>
     <div class="grid-container"></div>
 </body>
 </html>
